# computer-vision-project

./: .gitignore  README.md  data_preparation.py  pyproject.toml
