[tool.poetry]
name = "computer-vision-project"
version = "0.1.0"
description = ""
authors = ["Aivaras Puškorius, Martynas Rasikevičius"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10"
tensorflow-io-gcs-filesystem = "0.27.0"
tensorflow = "2.10"
numpy = "^1.26.4"
nvidia-cuda-runtime-cu11 = "^11.8.89"
nvidia-cudnn-cu11 = "^9.6.0.74"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
